# pySTAAR

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
baselines/: SOURCE.md  ai_staar_related_dense_glmmkin_find_weight_sentinels.json  ai_staar_related_dense_glmmkin_sentinels.json  ai_staar_related_sparse_glmmkin_find_weight_sentinels.json  ai_staar_related_sparse_glmmkin_sentinels.json  ai_staar_unrelated_glm_find_weight_sentinels.json  ai_staar_unrelated_glm_sentinels.json  indiv_score_related_dense_glmmkin_cond_nonexample601_sentinels.json  indiv_score_related_dense_glmmkin_cond_sentinels.json  indiv_score_related_dense_glmmkin_sentinels.json  indiv_score_related_sparse_glmmkin_cond_nonexample601_sentinels.json  indiv_score_related_sparse_glmmkin_cond_sentinels.json  indiv_score_related_sparse_glmmkin_sentinels.json  indiv_score_unrelated_glm_cond_sentinels.json  indiv_score_unrelated_glm_sentinels.json  nonexample601_fingerprint.json  nonexample601_sim_data.rds  nonexample601_sim_metadata.json  nonexample602_fingerprint.json  nonexample602_sim_data.rds  nonexample602_sim_metadata.json  related_dense_binary_spa_filter_sentinels.json  related_dense_binary_spa_sentinels.json  related_dense_glmmkin_cond_nonexample601_sentinels.json  related_dense_glmmkin_cond_sentinels.json  related_dense_glmmkin_rare_maf_0_01_sentinels.json  related_sparse_binary_spa_filter_sentinels.json  related_sparse_binary_spa_nonexample601_sentinels.json  related_sparse_binary_spa_sentinels.json  related_sparse_glmmkin_cond_nonexample601_sentinels.json  related_sparse_glmmkin_cond_nonexample602_sentinels.json  related_sparse_glmmkin_cond_sentinels.json  related_sparse_glmmkin_nonexample601_sentinels.json  related_sparse_glmmkin_rare_maf_0_01_sentinels.json  unrelated_binary_spa_case_q90_sentinels.json  unrelated_binary_spa_filter_sentinels.json  unrelated_binary_spa_sentinels.json  unrelated_glm_cond_sentinels.json  unrelated_glm_nonexample601_sentinels.json  unrelated_glm_rare_maf_0_01_sentinels.json  (+1 more)
benchmarks/: phase3_baseline_meta.json  phase3_baseline_r_meta.json  (+38 more)
(+186 files in other folders)
