[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pystaar"
version = "1.0.0"
description = "Python migration of the STAAR R package"
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [
  { name = "STAAR migration" }
]
keywords = [
  "staar",
  "genomics",
  "genetics",
  "rare-variant",
  "association-testing",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/xiaozhouwang/pySTAAR"
Repository = "https://github.com/xiaozhouwang/pySTAAR"
Documentation = "https://github.com/xiaozhouwang/pySTAAR/tree/main/docs"
Issues = "https://github.com/xiaozhouwang/pySTAAR/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pystaar = ["_data/*"]
